--- a/AOAI_assistants.ipynb
+++ b/AOAI_assistants.ipynb
@@ -331,7 +331,7 @@
    "outputs": [],
    "source": [
     "plot_file_id = message.image_file.file_id\n",
-    "line_plot_path = \"./images/line_plot3.png\"\n",
+    "line_plot_path = \"./images/line_plot.png\"\n",
     "data = client.files.content(plot_file_id)\n",
     "with open(line_plot_path, \"wb\") as file:\n",
     "    file.write(data.read())\n",
