fix some wording

--- a/AOAI_assistants.ipynb
+++ b/AOAI_assistants.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Azure OpenAI Assistants using the Python OpenAI SDK\n",
     "\n",
-    "In this demo, we'll use Azure OpenAI assistants (preview) through the Python OpenAI SDK to automatically generate a TPS report for a fictional company called Contoso. We'll create an AI assistant to help us produce a plot from our data, gather insights from the plot, and then summarize everything in a report with coversheet included!"
+    "In this demo, we'll use Azure OpenAI assistants (preview) through the Python OpenAI SDK to automatically generate a TPS report for a fictional company called Contoso. Our AI assistant will help us produce a plot from our data, analyze the plot, and then summarize everything in a report with coversheet included!"
    ]
   },
   {
@@ -17,9 +17,9 @@
     "\n",
     "Azure OpenAI Assistants allows you to create AI assistants tailored to your needs through custom instructions and augmented by advanced tools like code interpreter, and custom functions.\n",
     "\n",
-    "- **Assistants**: encapsulates the model, its instructions, tools, and (context) documents\n",
+    "- **Assistants**: encapsulates the model, its instructions, tools, and context\n",
     "- **Threads**: represents the state of a conversation\n",
-    "- **Runs**: executes an Assistant on a Thread, including the textual responses and multi-step tool use"
+    "- **Runs**: executes an Assistant on a Thread, and includes textual responses and multi-step tool use"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "source": [
     "### 1. Create a plot from our data\n",
     "\n",
-    "We have csv data that contains an average latency for each resource over a 24 hour period. We'll start by reading the file with pandas and then creating a file so that assistants can use it with future requests. "
+    "We have csv data that contains the average latency for several resources over a 24 hour period. Let's read the data with pandas and then create a file to use with future requests. "
    ]
   },
   {
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll start by creating an Assistant. This call will capture the instructions for the assistant, which tools are available to use, and model to use. In our case, we'll equip our assistant with the code interpreter tool which allows the Assistants API to write and run Python code in a sandboxed execution environment."
+    "We'll start by creating an Assistant. This call will capture the instructions for the assistant, which tools are available to use, and the model to use. In our case, we'll equip our assistant with the code interpreter tool which allows the Assistant to write and run Python code in a sandboxed execution environment."
    ]
   },
   {
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we'll create a thread and add our message context for the assistant. We'll include the data file ID in the message since the assistant will need the file to complete the task. Now we can run the thread and wait for a response."
+    "Next, we'll create a thread and add our message context for the assistant. We'll include our data file ID in the message since the assistant will need the file to complete the task. Now we can run the thread and wait for a response."
    ]
   },
   {
@@ -321,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we'll view the plot created and create a file for the assistant to use later."
+    "Let's view the plot created and create a file for the assistant to use later."
    ]
   },
   {
@@ -515,7 +515,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And we're done! See [report/tps_report.pdf](report/tps_report.pdf) for the final report."
+    "### Conclusion\n",
+    "\n",
+    "And we're done! In this short demo, we used Azure OpenAI Assistants through the Python OpenAI SDK to generate a fictional TPS report for us. The Assistant plotted our data, analyzed the plot, generated a coversheet, and combined everything into a PDF report for us to download. See [report/tps_report.pdf](report/tps_report.pdf) for the final report."
    ]
   }
  ],
