include more interesting output

--- a/AOAI_assistants.ipynb
+++ b/AOAI_assistants.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "2  3/25/2024  2:00         410         314         110"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
     "\n",
     "        messages = client.beta.threads.messages.list(thread_id=thread.id)\n",
     "        latest_message = messages.data[0].content[0]\n",
-    "        print(f\"Assistant update: {latest_message.text.value}\")\n",
+    "        print(f\"Assistant update: {latest_message}\")\n",
     "        time.sleep(10)\n",
     "\n",
     "    if latest_message.type == \"image_file\":\n",
@@ -294,14 +294,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant update: Visualize Latency over Time as a line plot across Resources, where the colors of the lines are red (Resource A), green (Resource B), and blue (Resource C). Title the plot 'Avg Latency (last 24 hrs)'. The plot should fit on single sheet of paper.\n",
+      "Assistant update: MessageContentText(text=Text(annotations=[], value=\"Visualize Latency over Time as a line plot across Resources, where the colors of the lines are red (Resource A), green (Resource B), and blue (Resource C). Title the plot 'Avg Latency (last 24 hrs)'. The plot should fit on single sheet of paper.\"), type='text')\n",
+      "Assistant update: MessageContentText(text=Text(annotations=[], value='The data has been successfully loaded and we have columns for \"Date\", \"Time\", and latency values for \"Resource A\", \"Resource B\", and \"Resource C\". The next step is to convert the \"Date\" and \"Time\" columns into a single datetime column so we can plot the data over time and then visualize the data as requested.'), type='text')\n",
+      "Assistant update: MessageContentImageFile(image_file=ImageFile(file_id='assistant-A0sGEp2iHyowNQuEVXcFnhf4'), type='image_file')\n",
       "Image has been created!\n"
      ]
     }
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,16 +367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Run(id='run_amLSh3IwrN7wCTyvSb0k6EOe', assistant_id='asst_DJuwVZh8InhiuUn77gwyHPC6', cancelled_at=None, completed_at=None, created_at=1711751454, expires_at=1711752054, failed_at=None, file_ids=[], instructions='You are a data scientist assistant. When given data and a query,     write the necessary code to create the proper visualization.', last_error=None, metadata={}, model='gpt-4-1106-preview', object='thread.run', required_action=None, started_at=None, status='queued', thread_id='thread_E76FwIRZ41HdN5qgpDJOVyRg', tools=[ToolAssistantToolsCode(type='code_interpreter')], usage=None)"
+       "Run(id='run_nNo6AiZ2lOGVOWWgdnZrFauY', assistant_id='asst_icp57fTulqSHekKqyURZksbV', cancelled_at=None, completed_at=None, created_at=1712019268, expires_at=1712019868, failed_at=None, file_ids=[], instructions='You are a data scientist assistant. When given data and a query,     write the necessary code to create the proper visualization.', last_error=None, metadata={}, model='gpt-4-1106-preview', object='thread.run', required_action=None, started_at=None, status='queued', thread_id='thread_3rVT44Lmx0SHKiK4nqx0V7CR', tools=[ToolAssistantToolsCode(type='code_interpreter')], usage=None)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,18 +479,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant update: The TPS report for Contoso has been successfully created as a two-page PDF document. The first page includes the title and the first image, and the second page contains the plot image and the insights listed in bullet points. \n",
-      "\n",
-      "You can download the report from the following link:\n",
-      "\n",
-      "[Download Contoso TPS Report PDF](sandbox:/mnt/data/Contoso_TPS_Report.pdf)\n",
+      "Assistant update: MessageContentText(text=Text(annotations=[], value=\"Create a PDF file TPS report for the company Contoso. IMPORTANT: \\n\\nFIRST PAGE: include title 'Contoso TPS Report' centered at the top. Underneath text, include the image file included in this message. Crop or reduce size of image to make sure it fits on the page.\\n\\nSECOND PAGE: include the plot image included in this message. Underneath the plot, include the bullet point insights that were generated from the data. Both the plot and insights MUST fit on the page, reducing size, or wrapping any text to the next line, if necessary. Output these TWO PAGES as a .pdf file. Make sure the output is two pages, with each page matching the instructions from this message.\"), type='text')\n",
+      "Assistant update: MessageContentText(text=Text(annotations=[], value=\"It appears that there is an issue with saving one of the images in JPEG format because it's in 'RGBA' mode, which includes an alpha channel (transparency). JPEG does not support transparency, so we need to convert the image to 'RGB' mode before saving it as JPEG. I will fix this issue and proceed with the creation of the PDF.\"), type='text')\n",
+      "Assistant update: MessageContentText(text=Text(annotations=[], value=\"There was a mistake in my usage of the `cell` function from the `fpdf` library. I passed incorrect keyword arguments that are not valid for the `cell` function. I need to correct the code to ensure the proper creation of the cell in the PDF document. Let's fix that and attempt to generate the PDF again.\"), type='text')\n",
+      "Assistant update: MessageContentText(text=Text(annotations=[], value='It seems that the variable `insight_text` was lost when the previous cell failed to complete. Let me re-define the insights text and then complete the PDF generation process.'), type='text')\n",
+      "Assistant update: MessageContentText(text=Text(annotations=[TextAnnotationFilePath(end_index=433, file_path=TextAnnotationFilePathFilePath(file_id='assistant-9oZtKynQTi0d6rQWnfykn9JS'), start_index=393, text='sandbox:/mnt/data/contoso_tps_report.pdf', type='file_path')], value='The PDF TPS report for the company Contoso has been successfully created. The report contains two pages, with the first page including the title \"Contoso TPS Report\" and the provided image, and the second page including the plot image along with the bullet point insights generated from the data.\\n\\nYou can download the PDF report using the following link:\\n\\n[Contoso TPS Report - Download PDF](sandbox:/mnt/data/contoso_tps_report.pdf)'), type='text')\n",
       "File has been created!\n"
      ]
     }
