use poll method

--- a/AOAI_assistants.ipynb
+++ b/AOAI_assistants.ipynb
@@ -267,18 +267,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "\n",
     "def wait_until_done(run):\n",
-    "    status = \"\"\n",
-    "    while status not in [\"completed\", \"cancelled\", \"expired\", \"failed\"]:\n",
-    "        run = client.beta.threads.runs.retrieve(thread_id=thread.id, run_id=run.id)\n",
-    "        status = run.status\n",
+    "    client.beta.threads.runs.poll(\n",
+    "        run_id=run.id,\n",
+    "        thread_id=thread.id,\n",
+    "    )\n",
     "\n",
-    "        messages = client.beta.threads.messages.list(thread_id=thread.id)\n",
-    "        latest_message = messages.data[0].content[0]\n",
-    "        print(f\"Assistant update: {latest_message}\")\n",
-    "        time.sleep(10)\n",
+    "    messages = client.beta.threads.messages.list(thread_id=thread.id)\n",
+    "    latest_message = messages.data[0].content[0]\n",
+    "    for message in messages.data[::-1]:\n",
+    "        print(f\"Assistant update: {message.content}\")\n",
     "\n",
     "    if latest_message.type == \"image_file\":\n",
     "        print(\"Image has been created!\")\n",
@@ -501,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
